[package]
name = "uno-r3"
version = "0.1.0"
edition = "2018"

[dependencies]
# A panic handler is needed. This is a crate with the most basic one.
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "9de2dfe"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"